--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Assignment</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <section class="flexible-container">
+    <div class="half-width">
+        <h1>Stay Focused on</h1>  
+        <h1 class="another-color" >Mission 2022</h1>
+        <p class="first-pera">I am a beginner. I am a student of CST. That's why it's my goal to be a programmer. 'Programming Hero' is the best platform for beginners like me. So, i am full focused on this course. It's my mission to be a Junior Web Developer in this 2022. </p>
+       <a class="explore-button" href="">Explore Now</a>
+        <h5 class="scroll-down">Scroll down to explore more about us</h5>
+      </div>
     
+      <div class="half-width">
+        <img src="images/person/person-1.png" alt="">
+      </div>
+  </section>
 </body>
 </html>
