--- a/index.html
+++ b/index.html
@@ -11,17 +11,76 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section class="flexible-container">
+  <section class="flex-container">
     <div class="half-width">
         <h1>Stay Focused on</h1>  
         <h1 class="another-color" >Mission 2022</h1>
         <p class="first-pera">I am a beginner. I am a student of CST. That's why it's my goal to be a programmer. 'Programming Hero' is the best platform for beginners like me. So, i am full focused on this course. It's my mission to be a Junior Web Developer in this 2022. </p>
-       <a class="explore-button" href="">Explore Now</a>
+       <a class="click-button" href="">Explore Now</a>
         <h5 class="scroll-down">Scroll down to explore more about us</h5>
       </div>
     
       <div class="half-width">
         <img src="images/person/person-1.png" alt="">
+      </div>
+  </section>
+
+  <section class="mission-container">
+    <h2 id="mission">My Mission in <span class="year">2022</span></h2>
+
+    <div class="grid-container">
+        <div class="grid-mission"> 
+            <img src="images/illustrators/illustrator-1.png" alt="">
+            <h3>Mission</h3>
+            <p>
+                I am a beginner. I am a student of CST. That's why it's my goal to be a programmer. 'Programming Hero' is the best platform for beginners like me. 
+            </p>
+        </div>
+        <div class="grid-vission">
+            <img src="images/illustrators/illustrator-2.png" alt="">
+            <h3>Vission</h3>
+            <p>
+                I am a beginner. I am a student of CST. That's why it's my goal to be a programmer. 'Programming Hero' is the best platform for beginners like me. 
+            </p>
+        </div>
+        <div class="grid-goals">
+        <img src="images/illustrators/illustrator-3.png" alt="">
+        <h3>Goals</h3>
+        <p>
+            I am a beginner. I am a student of CST. That's why it's my goal to be a programmer. 'Programming Hero' is the best platform for beginners like me. 
+        </p>
+        </div>
+    
+    </div>
+
+
+  </section>
+
+  <section class="flex-container">
+    <div class="last-part">
+        <img src="images/pictures/coding.png" alt="">
+      </div>
+    <div class="last-part">
+        <h2><strong>Develop</strong></h2>
+        <h2><strong>without limits</strong></h2>
+    <p class="first-pera">
+        I am a beginner. I am a student of CST. That's why it's my goal to be a programmer. 'Programming Hero' is the best platform for beginners like me. So, i am full focused on this course. It's my mission to be a Junior Web Developer in this 2022.
+    </p>
+    <a class="click-button" href="">Read The Documentation</a>
+
+    </div>
+  </section>
+  <section class="flex-container">
+      <div class="last-part">
+          <h2><strong>Know Our</strong></h2>
+          <h2><strong>global community</strong></h2>
+          <p class="first-pera">I am a beginner. I am a student of CST. That's why it's my goal to be a programmer. 'Programming Hero' is the best platform for beginners like me. So, i am full focused on this course. It's my mission to be a Junior Web Developer in this 2022.
+          </p>
+          <a class="click-button" href="">Read More</a>
+      </div>
+
+      <div class="last-part">
+          <img src="images/pictures/project.png" alt="">
       </div>
   </section>
 </body>
