--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <section class="flex-container">
     <div class="half-width">
         <h1>Stay Focused on</h1>  
-        <h1 class="another-color" >Mission 2022</h1>
+        <h1 style="color: orange;">Mission 2022</h1>
         <p class="first-pera">I am a beginner. I am a student of CST. That's why it's my goal to be a programmer. 'Programming Hero' is the best platform for beginners like me. So, i am full focused on this course. It's my mission to be a Junior Web Developer in this 2022. </p>
        <a class="click-button" href="">Explore Now</a>
         <h5 class="scroll-down">Scroll down to explore more about us</h5>
@@ -83,5 +83,9 @@
           <img src="images/pictures/project.png" alt="">
       </div>
   </section>
+  <footer>
+          <h2><i>Mission <span style="color: rgb(240, 146, 115);" >2022</span></i></h2>
+          <small style="color: rgb(138, 224, 224);" >Hard work, Perseverance and Determination for 2022</small>
+  </footer>
 </body>
 </html>
