--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
             <img src="images/illustrators/illustrator-1.png" alt="">
             <h3>Mission</h3>
             <p>
-                I am a beginner. I am a student of CST. That's why it's my goal to be a programmer. 'Programming Hero' is the best platform for beginners like me. 
+                I am a beginner. I want to learn HTML and CSS. It's my goal to be a programmer. I thing 'Programming Hero' is the best platform for beginners like me. It's my mission to be web developer.
             </p>
         </div>
         <div class="grid-vission">
             <img src="images/illustrators/illustrator-2.png" alt="">
             <h3>Vission</h3>
             <p>
-                I am a beginner. I am a student of CST. That's why it's my goal to be a programmer. 'Programming Hero' is the best platform for beginners like me. 
+            There are many many brilliant students. I think Every student of this course is determined. They want a bright future. I also want to be one of them. So, i am working hard. 
             </p>
         </div>
         <div class="grid-goals">
         <img src="images/illustrators/illustrator-3.png" alt="">
         <h3>Goals</h3>
         <p>
-            I am a beginner. I am a student of CST. That's why it's my goal to be a programmer. 'Programming Hero' is the best platform for beginners like me. 
+            I was in China for two years. In my university i met one of my favorite teacher. He told me to learn coding. I am walking in his path. My one and only goal is to work in any world class it firm. 
         </p>
         </div>
     
@@ -64,7 +64,7 @@
         <h2><strong>Develop</strong></h2>
         <h2><strong>without limits</strong></h2>
     <p class="first-pera">
-        I am a beginner. I am a student of CST. That's why it's my goal to be a programmer. 'Programming Hero' is the best platform for beginners like me. So, i am full focused on this course. It's my mission to be a Junior Web Developer in this 2022.
+        I am a beginner. There  is no limits in learning. As a beginner i am facing many problems. But i am trying to overcome from those. I am a student of CST. That's why it's my goal to be a programmer. You can also join with me.
     </p>
     <a class="click-button" href="">Read The Documentation</a>
 
@@ -74,7 +74,7 @@
       <div class="last-part">
           <h2><strong>Know Our</strong></h2>
           <h2><strong>global community</strong></h2>
-          <p class="first-pera">I am a beginner. I am a student of CST. That's why it's my goal to be a programmer. 'Programming Hero' is the best platform for beginners like me. So, i am full focused on this course. It's my mission to be a Junior Web Developer in this 2022.
+          <p class="first-pera">We all are beginner. We have to know about all basics of HTML & CSS. 'Programming Hero' is the best platform for beginners like us. So,we are doing this course. It's a mission to be Junior Web Developer in this 2022. I wish, you guys will help us.
           </p>
           <a class="click-button" href="">Read More</a>
       </div>
@@ -83,6 +83,23 @@
           <img src="images/pictures/project.png" alt="">
       </div>
   </section>
+
+  <section>
+      <div id="Contact" class="submit-button">
+          <h2>Stay connect With Me</h2>
+          <h3>Write Your Comments Here</h3>
+          <form action=""> 
+               <input type="text" name="" placeholder="comment" id="text"><br>
+               <input id="submit" class="click-button" type="submit" value="Submit">
+            </form>
+      </div>
+
+      <div class="last-part">
+          <img src="images/pictures/istockphoto-1150963931-612x612.jpg" alt="">
+      </div>
+  </section>
+
+
   <footer>
           <h2><i>Mission <span style="color: rgb(240, 146, 115);" >2022</span></i></h2>
           <small style="color: rgb(138, 224, 224);" >Hard work, Perseverance and Determination for 2022</small>
